# lvmdrp

./: .gitignore  .gitmodules  CHANGELOG.rst  CODEOWNERS  Dockerfile  MANIFEST.in  README.md  README.rst  STYLE.rst  lvmdrp.pkglist  requirements.txt  requirements_all.txt  requirements_third.txt  requirements_ubuntu.txt  sdss-desisim.code-workspace  setup.cfg  setup.py  tasks.py  today.txt
.github/workflows/: test.yaml
cextern/: README.txt
cextern/fast_median/: fast_median.py
docs/nb/: MW_plane.yaml  astro.py  califa-lamps.ipynb  darks.ipynb  dummy-data-generator.ipynb  dummy-fiberassing-generator.ipynb  dummy-fiberflat-generator.ipynb  dummy-fibermap-generator.ipynb  estimate-gain.ipynb  fiberflats-analysis-spec1.ipynb  fiberflats-analysis-spec3.ipynb  fiberflats-analysis.ipynb  fiberflats-spec1.ipynb  fiberflats-spec2.ipynb  fiberflats-spec3.ipynb  fiberflats-test.ipynb  gd_test.ipynb  lab-analysis.ipynb  lab-lamps.ipynb  lab-spec-1-tests.ipynb  lab-spec-2-tests.ipynb  lab-spec-3-tests.ipynb  lvm-lab-data-generator.ipynb  lvm2desi-targetmask.ipynb  lvm2desi-translator.ipynb  lvm_calibration.ipynb  lvm_preproc.ipynb  prepro-debug.ipynb  preproc-debug.ipynb  reduce-sim.ipynb  reproject-sim.ipynb  sim-analysis.ipynb  sky-cont.ipynb  sky-simulation.ipynb  skycorr-test.ipynb  skyfield-tests.ipynb
docs/sphinx/: api.rst  conf.py  index.rst
examples/: fiberflat_reduction.ipynb
examples/calibration/: arc_reduction.ipynb  basic_calibration.ipynb  fiberflat_reduction.ipynb  frame_detrending.ipynb
examples/experiments_gaia/: lvm_fiber_gaia_xmatch.py
examples/lco_com/: Calib.ipynb  Cube_ana.ipynb  Cube_gen.ipynb  HD60753.reg  HR1544.reg  Response.ipynb  SensF_v2.fits  SensF_v3.fits  Visualize_cube.ipynb  aperture_corrections.ipynb  arc_reduction.ipynb  arcs.ipynb  arcs_combine.ipynb  arcs_detrend.ipynb  arcs_master.ipynb  calibration.ipynb  cosmics.ipynb  detrending.ipynb  fiberflats.ipynb  fiberflats_std.ipynb  full_reduction.ipynb  gaia_conv.ipynb  gaia_stars_analysis.ipynb  general_testing.ipynb  glue_sp_chn.ipynb  glue_sp_chn.py  lvm_ptc.ipynb  nd_notebook.ipynb  nd_notebook_1.ipynb  overscan_analysis.ipynb  pixelflats.ipynb  pixmasks.ipynb  quickred.230804.py  quickred.ipynb  quickred.py  quickred_no_redo.py  quicksky.ipynb  sait_report.ipynb  stdstar_catalog.ipynb  testextract.ipynb  (+10 more)
examples/sky_module/: README.md  gb_skysub_tests.ipynb  simple_sky_subtraction.ipynb  toy_sky_data.ipynb
lvmscripts/: git_clean_clone.sh  install.sh
python/Py3D/: Py3D.e4p  (+1 more)
tests/: conftest.py  test_main.py
utils/: install.sh  lvmenv.sh  repo_update.sh
(+295 files in other folders)
