[metadata]
name = lvmdrp
version = 1.2.1dev
author = Alfredo Mejia-Narvaez
author_email = alfredoj.32@gmail.com
description = SDSSV-LVM Data Reduction Pipeline
url = https://github.com/sdss/lvmdrp
project_urls =
	Repository = https://github.com/sdss/lvmdrp
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: BSD License,
    Natural Language :: English,
    Operating System :: OS Independent,
    Programming Language :: Python,
    Programming Language :: Python :: 3.10,
    Topic :: Documentation :: Sphinx,
    Topic :: Software Development :: Libraries :: Python Modules,

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.10
packages = find:
package_dir =
	= python
install_requires =
	numpy>=1.24.1,<2.0.0
	scipy>=1.10.1
	matplotlib>=3.6.2
	pandas[hdf5]>=2.0.0
	tqdm>=4.64.1
	astropy>=6.0
	ccdproc>=2.4.0
	dust_extinction>=1.1
	skyfield>=1.45
	pydl>=0.7.0
	skycalc_cli==1.4
	sdsstools>=1.4
	sdss-tree>=4.0
	sdss-access>=3.0
	click>=8.0
	cloup>=2.0
	bottleneck>=1.3.7
	h5py>=3.8.0
	filelock>=3.14.0
	numexpr==2.8.4
	gaiaxpy>=2.1.0
	astroquery>=0.4.8
	lmfit>=1.3.4
	plotly>=6.4.0
	kaleido>=1.2.0

scripts =
	bin/drp
	bin/pix2wave
	bin/envcheck

[options.packages.find]
where =
	python

[options.package_data]
lvmdrp =
	etc/*

[options.extras_require]
dev =
	%(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
	ipython>=8.10.0
	jupyter>=1.0.0
	jupyterlab>=3.6.1
	ipywidgets>=8.1.0
	ipympl==0.9.3
	pytest>=7.4.3
	pytest-click>=1.1.0
	pytest-cov>=4.1.0
	pytest-mock>=3.12.0
	pytest-sugar>=0.9.7
	ruff>=0.0.285

docs =
	Sphinx>=5.2.0
	sphinx_bootstrap_theme>=0.4.12
	recommonmark>=0.6
	sphinx-argparse>=0.2.5
	sphinx-issues>=1.2.0


[isort]
line_length = 100
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = tree
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov lvmdrp --cov-report xml --cov-report html --cov-report term -W ignore

[coverage:run]
branch = true
source =
	lvmdrp
omit =
	*/__init__.py

[coverage:report]
exclude_lines =
